// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionRowRecipientIcon should render avatar 1`] = `
<DocumentFragment>
  <div
    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
    data-testid="Avatar"
  >
    <div
      class="w-full h-full"
    >
      <img
        alt="test"
        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(255, 87, 34)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"70\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"55\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
        title="test"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TransactionRowRecipientIcon should render counter 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm jcZnVc"
    data-testid="TransactionRowRecipientIcon"
  >
    <span>
      2
    </span>
  </div>
</DocumentFragment>
`;

exports[`TransactionRowRecipientIcon should render icon 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm jcZnVc border-theme-text text-theme-text"
    data-testid="TransactionRowRecipientIcon"
  >
    <div
      class="sc-AxirZ iQaTP"
      height="1em"
      width="1em"
    >
      <svg>
        key.svg
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
